зробив сторінку ABOUT US

--- a/src/index.html
+++ b/src/index.html
@@ -35,23 +35,25 @@
 			<h3 class="page-caption">ABOUT US</h3>
 			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
 			<div class="content-about-us">
-				<img src="images/about_us-1.png" alt="work place">
+				<div class="image-about-us">
+					<img src="images/about_us-1.png" alt="work place">
+					<div class="navigation-dots-about-us">
+						<i class="fas fa-circle"></i>
+						<i class="fas fa-circle"></i>
+						<i class="fas fa-circle"></i>
+					</div>			
+				</div>				
 				<article class="article-about-us">
-					<h5 class="caption-item">We Actually Do amazing works</h5>
-					<p class="content-item">A visual approach is an approach to a runway at an airport 
+					<h5 class="caption-article">We Actually Do amazing works</h5>
+					<p class="text-article">A visual approach is an approach to a runway at an airport 
 					conducted under instrument flight rules. The pilot must at all times have either the airport or the preceding aircraft in approach correct sight. conducted under instrument flight rules. The pilot must at all times.</p>
-					<p class="content-item">Preceding aircraft in approach correct sight. conducted under instrument flight rules.</p>
+					<p class="text-article">Preceding aircraft in approach correct sight. conducted under instrument flight rules.</p>
 					<h6>why we are the great?</h6>
-					<p class="content-item">A visual approach is an approach to a runway at an airport 
+					<p class="text-article">A visual approach is an approach to a runway at an airport 
 					conducted under instrument flight rules.<br>
 					The preceding aircraft in approach correct sight.</p>
 				</article>
-			</div>
-			<div class="navigation-dots-about-us">
-				<i class="fas fa-circle"></i>
-				<i class="fas fa-circle"></i>
-				<i class="fas fa-circle"></i>
-			</div>				
+			</div>					
 		</section>
 	</div>
 	
