made section FEATURED WORKS

--- a/src/index.html
+++ b/src/index.html
@@ -59,19 +59,33 @@
 	
 	<!-- ============ FEATURED WORKS ============ -->
 
-	<div class="wrapper-works">
-		<h3 class="page-caption1">Featured works</h3>
-		<h4 class="page-caption2">Lorem ipsum dolor sit amet event landing template</h4>
-		<div class="works-images">
-			<img src="images/work-1.png" alt="ice cream">
-			<img src="images/work-2.png" alt="cards">
-			<img src="images/work-3.png" alt="three bottles">
-			<img src="images/work4.png" alt="book">
-			<img src="images/work-5.png" alt="number nine">
-			<img src="images/work-6.png" alt="tea bag">
+	<div class="main-featured-works">
+		<div class="wrapper featured-works">
+			<h3 class="page-caption">Featured works</h3>
+			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
+			<div class="works-items">
+				<div class="works-item">
+					<img src="images/work-1.png" alt="ice cream" >
+				</div>
+				<div class="works-item">
+					<img src="images/work-2.png" alt="cards">
+				</div>
+				<div class="works-item">
+					<img src="images/work-3.png" alt="three bottles">
+				</div>
+				<div class="works-item">
+					<img src="images/work4.png" alt="book">
+				</div>
+				<div class="works-item">
+					<img src="images/work-5.png" alt="number nine">
+				</div>
+				<div class="works-item">
+					<img src="images/work-6.png" alt="tea bag">
+				</div>				
+			</div>
 		</div>
 	</div>
-
+	
 	<!-- ============ SERVICES ============ -->
 
 	<div class="wrapper-services">
