begin work at section OUR SERVICES

--- a/src/index.html
+++ b/src/index.html
@@ -88,71 +88,73 @@
 	
 	<!-- ============ SERVICES ============ -->
 
-	<div class="wrapper-services">
-		<h3 class="page-caption1">our services</h3>
-		<h4 class="page-caption2">Lorem ipsum dolor sit amet event landing template</h4>
-		<div class="services-items">
-			<div class="items-group">
-				<div class="services-item1">
-					<h6 class="caption-item">Designing is The Cool Love For.</h6>
-					<p class="content-item">Our most popular service is our Virtual Receptionist. We know that sometimes it’s something and you middle most this job was posted less than five minutes ago, and we think it’s a good match for you. If you submit a proposal now, you’ll be one of the first candidates. You may even catch the client while they’re still online.</p>
+	<div class="main-services">
+		<div class="wrapper-services">
+			<h3 class="page-caption">our services</h3>
+			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
+			<div class="services-items">
+				<div class="items-group">
+					<div class="services-item1">
+						<h6 class="caption-item">Designing is The Cool Love For.</h6>
+						<p class="content-item">Our most popular service is our Virtual Receptionist. We know that sometimes it’s something and you middle most this job was posted less than five minutes ago, and we think it’s a good match for you. If you submit a proposal now, you’ll be one of the first candidates. You may even catch the client while they’re still online.</p>
+					</div>
+					<div class="services-item2">
+						<img src="images/services-1.png" alt="workplace">
+						<div class="opacity">
+							<h6 class="caption-opacity">cool psd Design</h6>
+							<p class="content-opacity">Our most popular service is our we know that sometimes it’s something and you middle most...</p>
+							<p class="know-more">KNOW MORE</p>
+							<img src="images/rectangle-18-copy-6.png">
+						</div>	
+					</div>
 				</div>
-				<div class="services-item2">
-					<img src="images/services-1.png" alt="workplace">
-					<div class="opacity">
-						<h6 class="caption-opacity">cool psd Design</h6>
-						<p class="content-opacity">Our most popular service is our we know that sometimes it’s something and you middle most...</p>
-						<p class="know-more">KNOW MORE</p>
-						<img src="images/rectangle-18-copy-6.png">
-					</div>	
+				<div class="items-group">
+					<div class="services-item3">
+						<img src="images/services-2.png" alt="laptop">
+						<div class="opacity">
+							<h6 class="caption-opacity">Designing is The Cool</h6>
+							<p class="content-opacity">Our most popular service is our Virtual Receptionist. We know that ...</p>
+							<p class="know-more">KNOW MORE</p>
+							<img src="images/rectangle-18-copy-6.png">
+						</div>	
+					</div>
+					<div class="services-item4">
+						<img src="images/services-3.png" alt="workplace">
+						<div class="opacity">
+							<h6 class="caption-opacity">PSD TO HTML KORI</h6>
+							<p class="content-opacity">We know that sometimes it’s something and you middle most...</p>
+							<p class="know-more">KNOW MORE</p>
+							<img src="images/rectangle-18-copy-6.png">
+						</div>	
+					</div>
 				</div>
+				<div class="items-group">
+					<div class="services-item5">
+						<img src="images/services-4.png" alt="bottle">
+						<div class="opacity">
+							<h6 class="caption-opacity">cool psd Design</h6>
+							<p class="content-opacity">Our most popular service is our new virtual Receptionist you middle most...</p>
+							<p class="know-more">KNOW MORE</p>
+							<img src="images/rectangle-18-copy-6.png">
+						</div>	
+					</div>
+					<div class="services-item6">
+						<img src="images/services-5.png" alt="dishes">
+						<div class="opacity">
+							<h6 class="caption-opacity">Designing is The Cool FOR</h6>
+							<p class="content-opacity">Our most popular service is our Virtual Receptionist. We know that sometimes it’s something and you middle most...</p>
+							<p class="know-more">KNOW MORE</p>
+							<img src="images/rectangle-18-copy-6.png">
+						</div>	
+					</div>
+				</div>			
 			</div>
-			<div class="items-group">
-				<div class="services-item3">
-					<img src="images/services-2.png" alt="laptop">
-					<div class="opacity">
-						<h6 class="caption-opacity">Designing is The Cool</h6>
-						<p class="content-opacity">Our most popular service is our Virtual Receptionist. We know that ...</p>
-						<p class="know-more">KNOW MORE</p>
-						<img src="images/rectangle-18-copy-6.png">
-					</div>	
-				</div>
-				<div class="services-item4">
-					<img src="images/services-3.png" alt="workplace">
-					<div class="opacity">
-						<h6 class="caption-opacity">PSD TO HTML KORI</h6>
-						<p class="content-opacity">We know that sometimes it’s something and you middle most...</p>
-						<p class="know-more">KNOW MORE</p>
-						<img src="images/rectangle-18-copy-6.png">
-					</div>	
-				</div>
-			</div>
-			<div class="items-group">
-				<div class="services-item5">
-					<img src="images/services-4.png" alt="bottle">
-					<div class="opacity">
-						<h6 class="caption-opacity">cool psd Design</h6>
-						<p class="content-opacity">Our most popular service is our new virtual Receptionist you middle most...</p>
-						<p class="know-more">KNOW MORE</p>
-						<img src="images/rectangle-18-copy-6.png">
-					</div>	
-				</div>
-				<div class="services-item6">
-					<img src="images/services-5.png" alt="dishes">
-					<div class="opacity">
-						<h6 class="caption-opacity">Designing is The Cool FOR</h6>
-						<p class="content-opacity">Our most popular service is our Virtual Receptionist. We know that sometimes it’s something and you middle most...</p>
-						<p class="know-more">KNOW MORE</p>
-						<img src="images/rectangle-18-copy-6.png">
-					</div>	
-				</div>
-			</div>			
 		</div>
-	</div>
+	</div>	
 
 	<!-- ============ TEAM ============ -->
 
-	<div class="wrapper-team">
+	<!-- <div class="wrapper-team">
 		<h3 class="page-caption1">small team</h3>
 		<h4 class="page-caption2">Lorem ipsum dolor sit amet event landing template</h4>
 		<div class="team-items">
@@ -163,11 +165,11 @@
 			<img src="images/team-5.png" alt="team member girl">
 			<img src="images/team-1.png" alt="team member girl">
 		</div>
-	</div>
+	</div> -->
 
 	<!-- ============ WHAT THEY SAYS ============ -->
 
-	<div class="wrapper-says">
+	<!-- <div class="wrapper-says">
 		<h3 class="page-caption1">what they says</h3>
 		<h4 class="page-caption2">Lorem ipsum dolor sit amet event landing template</h4>
 		<div class="says-items">
@@ -192,19 +194,19 @@
 			<i class="fas fa-angle-left"></i>
 			<i class="fas fa-angle-right"></i>
 		</div>			
-	</div>
+	</div> -->
 
 	<!-- ============ BRANDS ============ -->
 
-	<div class="wrapper-brands">
+	<!-- <div class="wrapper-brands">
 		<div class="brands">
 			<img src="images/logo-footer.png" alt="brands">
 		</div>
-	</div>
+	</div> -->
 
 	<!-- ============ CONTACTS ============ -->
 
-	<div class="wrapper-contacts">
+	<!-- <div class="wrapper-contacts">
 		<div class="contacts-opacity">
 			<div class="contacts">
 				<div class="forms">
@@ -233,11 +235,11 @@
 				</div>
 			</div>
 		</div>		
-	</div>
+	</div> -->
 
 	<!-- ============ FOOTER ============ -->
 
-	<footer>
+	<!-- <footer>
 		<div class="content-footer">
 			<h3>FOLLOW US</h3>
 			<div class="footer-icons">
@@ -248,7 +250,7 @@
 			</div>			
 			<p>Copyright kpexaman, All Rights Reserved</p>
 		</div>
-	</footer>
+	</footer> -->
 
 	<!-- ============ SCRIPTS ============ -->
 	
