continued work at section OUR SERVICES, made saction standing by grid

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 	<!-- ============ ABOUT US ============ -->
 
 	<div class="main-about-us">
-		<section class="wrapper about-us">
+		<section class="wrapper">
 			<h3 class="page-caption">ABOUT US</h3>
 			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
 			<div class="content-about-us">
@@ -60,7 +60,7 @@
 	<!-- ============ FEATURED WORKS ============ -->
 
 	<div class="main-featured-works">
-		<div class="wrapper featured-works">
+		<div class="wrapper">
 			<h3 class="page-caption">Featured works</h3>
 			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
 			<div class="works-items">
@@ -89,16 +89,16 @@
 	<!-- ============ SERVICES ============ -->
 
 	<div class="main-services">
-		<div class="wrapper-services">
+		<div class="wrapper">
 			<h3 class="page-caption">our services</h3>
 			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
 			<div class="services-items">
 				<div class="items-group">
-					<div class="services-item1">
+					<div class="services-item-1">
 						<h6 class="caption-item">Designing is The Cool Love For.</h6>
 						<p class="content-item">Our most popular service is our Virtual Receptionist. We know that sometimes it’s something and you middle most this job was posted less than five minutes ago, and we think it’s a good match for you. If you submit a proposal now, you’ll be one of the first candidates. You may even catch the client while they’re still online.</p>
 					</div>
-					<div class="services-item2">
+					<div class="services-item-2">
 						<img src="images/services-1.png" alt="workplace">
 						<div class="opacity">
 							<h6 class="caption-opacity">cool psd Design</h6>
@@ -109,7 +109,7 @@
 					</div>
 				</div>
 				<div class="items-group">
-					<div class="services-item3">
+					<div class="services-item-3">
 						<img src="images/services-2.png" alt="laptop">
 						<div class="opacity">
 							<h6 class="caption-opacity">Designing is The Cool</h6>
@@ -118,7 +118,7 @@
 							<img src="images/rectangle-18-copy-6.png">
 						</div>	
 					</div>
-					<div class="services-item4">
+					<div class="services-item-4">
 						<img src="images/services-3.png" alt="workplace">
 						<div class="opacity">
 							<h6 class="caption-opacity">PSD TO HTML KORI</h6>
@@ -129,7 +129,7 @@
 					</div>
 				</div>
 				<div class="items-group">
-					<div class="services-item5">
+					<div class="services-item-5">
 						<img src="images/services-4.png" alt="bottle">
 						<div class="opacity">
 							<h6 class="caption-opacity">cool psd Design</h6>
@@ -138,7 +138,7 @@
 							<img src="images/rectangle-18-copy-6.png">
 						</div>	
 					</div>
-					<div class="services-item6">
+					<div class="services-item-6">
 						<img src="images/services-5.png" alt="dishes">
 						<div class="opacity">
 							<h6 class="caption-opacity">Designing is The Cool FOR</h6>
