continued work at page OUR SERVICES, made responsive screens to 720 px

--- a/src/index.html
+++ b/src/index.html
@@ -101,8 +101,8 @@
 					<div class="services-item-2">
 						<img src="images/services-1.png" alt="workplace">
 						<div class="opacity">
-							<h6 class="caption-opacity">cool psd Design</h6>
-							<p class="content-opacity">Our most popular service is our we know that sometimes it’s something and you middle most...</p>
+							<h6 class="caption-item">cool psd Design</h6>
+							<p class="content-item">Our most popular service is our we know that sometimes it’s something and you middle most...</p>
 							<p class="know-more">KNOW MORE</p>
 							<img src="images/rectangle-18-copy-6.png">
 						</div>	
@@ -112,8 +112,8 @@
 					<div class="services-item-3">
 						<img src="images/services-2.png" alt="laptop">
 						<div class="opacity">
-							<h6 class="caption-opacity">Designing is The Cool</h6>
-							<p class="content-opacity">Our most popular service is our Virtual Receptionist. We know that ...</p>
+							<h6 class="caption-item">Designing is The Cool</h6>
+							<p class="content-item">Our most popular service is our Virtual Receptionist. We know that ...</p>
 							<p class="know-more">KNOW MORE</p>
 							<img src="images/rectangle-18-copy-6.png">
 						</div>	
@@ -121,8 +121,8 @@
 					<div class="services-item-4">
 						<img src="images/services-3.png" alt="workplace">
 						<div class="opacity">
-							<h6 class="caption-opacity">PSD TO HTML KORI</h6>
-							<p class="content-opacity">We know that sometimes it’s something and you middle most...</p>
+							<h6 class="caption-item">PSD TO HTML KORI</h6>
+							<p class="content-item">We know that sometimes it’s something and you middle most...</p>
 							<p class="know-more">KNOW MORE</p>
 							<img src="images/rectangle-18-copy-6.png">
 						</div>	
@@ -132,8 +132,8 @@
 					<div class="services-item-5">
 						<img src="images/services-4.png" alt="bottle">
 						<div class="opacity">
-							<h6 class="caption-opacity">cool psd Design</h6>
-							<p class="content-opacity">Our most popular service is our new virtual Receptionist you middle most...</p>
+							<h6 class="caption-item">cool psd Design</h6>
+							<p class="content-item">Our most popular service is our new virtual Receptionist you middle most...</p>
 							<p class="know-more">KNOW MORE</p>
 							<img src="images/rectangle-18-copy-6.png">
 						</div>	
@@ -141,8 +141,8 @@
 					<div class="services-item-6">
 						<img src="images/services-5.png" alt="dishes">
 						<div class="opacity">
-							<h6 class="caption-opacity">Designing is The Cool FOR</h6>
-							<p class="content-opacity">Our most popular service is our Virtual Receptionist. We know that sometimes it’s something and you middle most...</p>
+							<h6 class="caption-item">Designing is The Cool FOR</h6>
+							<p class="content-item">Our most popular service is our Virtual Receptionist. We know that sometimes it’s something and you middle most...</p>
 							<p class="know-more">KNOW MORE</p>
 							<img src="images/rectangle-18-copy-6.png">
 						</div>	
