begin work at section TEAM

--- a/src/index.html
+++ b/src/index.html
@@ -103,8 +103,8 @@
 						<div class="opacity">
 							<h6 class="caption-item">cool psd Design</h6>
 							<p class="content-item">Our most popular service is our we know that sometimes it’s something and you middle most...</p>
-							<p class="know-more">KNOW MORE</p>
-							<img src="images/rectangle-18-copy-6.png">
+							<p class="know-more">KNOW MORE</p>							
+							<img src="images/rectangle-18-copy-6.png">														
 						</div>	
 					</div>
 				</div>
@@ -154,18 +154,32 @@
 
 	<!-- ============ TEAM ============ -->
 
-	<!-- <div class="wrapper-team">
-		<h3 class="page-caption1">small team</h3>
-		<h4 class="page-caption2">Lorem ipsum dolor sit amet event landing template</h4>
-		<div class="team-items">
-			<img src="images/team-1.png" alt="team member girl">
-			<img src="images/team-2.png" alt="team member man">
-			<img src="images/team-3.png" alt="team member man">
-			<img src="images/team-4.png" alt="team member man">
-			<img src="images/team-5.png" alt="team member girl">
-			<img src="images/team-1.png" alt="team member girl">
+	<div class="main-team">
+		<div class="wrapper">
+			<h3 class="page-caption">small team</h3>
+			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
+			<div class="team-items">
+				<div class="team-item">
+					<img src="images/team-1.png" alt="team member girl">
+				</div>
+				<div class="team-item">
+					<img src="images/team-2.png" alt="team member man">
+				</div>
+				<div class="team-item">
+					<img src="images/team-3.png" alt="team member man">
+				</div>
+				<div class="team-item">
+					<img src="images/team-4.png" alt="team member man">
+				</div>
+				<div class="team-item">
+					<img src="images/team-5.png" alt="team member girl">
+				</div>
+				<div class="team-item">
+					<img src="images/team-1.png" alt="team member girl">
+				</div>				
+			</div>
 		</div>
-	</div> -->
+	</div>	
 
 	<!-- ============ WHAT THEY SAYS ============ -->
 
