--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,9 @@
 						<p class="content-item">Our most popular service is our Virtual Receptionist. We know that sometimes it’s something and you middle most this job was posted less than five minutes ago, and we think it’s a good match for you. If you submit a proposal now, you’ll be one of the first candidates. You may even catch the client while they’re still online.</p>
 					</div>
 					<div class="services-item-2">
-						<img src="images/services-1.png" alt="workplace">
+						<div class="services-img">
+							<img src="images/services-1.png" alt="workplace">
+						</div>						
 						<div class="opacity">
 							<h6 class="caption-item">cool psd Design</h6>
 							<p class="content-item">Our most popular service is our we know that sometimes it’s something and you middle most...</p>
@@ -110,7 +112,9 @@
 				</div>
 				<div class="items-group">
 					<div class="services-item-3">
-						<img src="images/services-2.png" alt="laptop">
+						<div class="services-img">
+							<img src="images/services-2.png" alt="laptop">
+						</div>						
 						<div class="opacity">
 							<h6 class="caption-item">Designing is The Cool</h6>
 							<p class="content-item">Our most popular service is our Virtual Receptionist. We know that ...</p>
@@ -119,7 +123,9 @@
 						</div>	
 					</div>
 					<div class="services-item-4">
-						<img src="images/services-3.png" alt="workplace">
+						<div class="services-img">
+							<img src="images/services-3.png" alt="workplace">
+						</div>						
 						<div class="opacity">
 							<h6 class="caption-item">PSD TO HTML KORI</h6>
 							<p class="content-item">We know that sometimes it’s something and you middle most...</p>
@@ -130,7 +136,9 @@
 				</div>
 				<div class="items-group">
 					<div class="services-item-5">
-						<img src="images/services-4.png" alt="bottle">
+						<div class="services-img">
+							<img src="images/services-4.png" alt="bottle">
+						</div>						
 						<div class="opacity">
 							<h6 class="caption-item">cool psd Design</h6>
 							<p class="content-item">Our most popular service is our new virtual Receptionist you middle most...</p>
@@ -139,7 +147,9 @@
 						</div>	
 					</div>
 					<div class="services-item-6">
-						<img src="images/services-5.png" alt="dishes">
+						<div class="services-img">
+							<img src="images/services-5.png" alt="dishes">
+						</div>						
 						<div class="opacity">
 							<h6 class="caption-item">Designing is The Cool FOR</h6>
 							<p class="content-item">Our most popular service is our Virtual Receptionist. We know that sometimes it’s something and you middle most...</p>
