finished work at section WHAT THE SAYS

--- a/src/index.html
+++ b/src/index.html
@@ -193,32 +193,43 @@
 
 	<!-- ============ WHAT THEY SAYS ============ -->
 
-	<!-- <div class="wrapper-says">
-		<h3 class="page-caption1">what they says</h3>
-		<h4 class="page-caption2">Lorem ipsum dolor sit amet event landing template</h4>
-		<div class="says-items">
-			<img src="images/man.png" alt="team member man" class="says-photo">
-			<div class="says-content">
-				<h5 class="caption-item">AL RAYHAN <span><i>/ UI/UX DESIGNER</i></span></h5>
-				<p class="content-item">Lorem Ipsum is simply dummy text of the printing and you 
-				standard dummy know that text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				<img src="images/shape-2.png">
-				<img src="images/shape-2.png">
-				<img src="images/shape-2.png">
-				<img src="images/shape-2.png">
-				<img src="images/shape-2.png">
-			</div>		
+	<div class="main-says">
+		<div class="wrapper">
+			<h3 class="page-caption">what they says</h3>
+			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
+			<div class="says-items">
+				<div class="says-section-1">
+					<div class="says-image">
+						<img src="images/man.png" alt="team member man" class="says-photo">	
+					</div>
+					<div class="navigation-dots-says">
+						<i class="fas fa-circle"></i>
+						<i class="fas fa-circle"></i>
+						<i class="fas fa-circle"></i>
+						<i class="fas fa-circle"></i>
+					</div>
+				</div>
+				<div class="says-section-2">
+					<div class="says-article">
+						<h5 class="caption-article">AL RAYHAN <span><i>/ UI/UX DESIGNER</i></span></h5>
+						<p class="text-article">Lorem Ipsum is simply dummy text of the printing and you 
+						standard dummy know that text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<div class="says-raiting">
+							<img src="images/shape-2.png">
+							<img src="images/shape-2.png">
+							<img src="images/shape-2.png">
+							<img src="images/shape-2.png">
+							<img src="images/shape-2.png">
+						</div>										
+					</div>
+					<div class="says-navigation">
+						<i class="fas fa-angle-left says-navigation-item"></i>
+						<i class="fas fa-angle-right says-navigation-item"></i>
+					</div>		
+				</div>			
+			</div>						
 		</div>
-		<div class="navigation-dots-says">
-			<i class="fas fa-circle"></i>
-			<i class="fas fa-circle"></i>
-			<i class="fas fa-circle"></i>
-		</div>			
-		<div class="says-navigation">
-			<i class="fas fa-angle-left"></i>
-			<i class="fas fa-angle-right"></i>
-		</div>			
-	</div> -->
+	</div>	
 
 	<!-- ============ BRANDS ============ -->
 
