finished work at section BRANDS

--- a/src/index.html
+++ b/src/index.html
@@ -233,11 +233,13 @@
 
 	<!-- ============ BRANDS ============ -->
 
-	<!-- <div class="wrapper-brands">
-		<div class="brands">
-			<img src="images/logo-footer.png" alt="brands">
+	<div class="main-brands">
+		<div class="wrapper">
+			<div class="brands">
+				<img src="images/logo-footer.png" alt="brands">
+			</div>
 		</div>
-	</div> -->
+	</div>	
 
 	<!-- ============ CONTACTS ============ -->
 
