finished work at section CONTACTS

--- a/src/index.html
+++ b/src/index.html
@@ -243,36 +243,39 @@
 
 	<!-- ============ CONTACTS ============ -->
 
-	<!-- <div class="wrapper-contacts">
+	<div class="main-contacts">
 		<div class="contacts-opacity">
-			<div class="contacts">
-				<div class="forms">
-					<form>
-						<input type="text" name="name" placeholder="Name*">				
-						<input type="text" name="subject" placeholder="Subject*">
-						<input type="text" name="e-mail" placeholder="E-mail*">
-						<textarea rows="8">Massege*</textarea>
-						<button class="send-massege">send massege</button>						
-					</form>
-				</div>				
-				<div class="address">
-					<div class="address1">
-						<p>Adress line 1</p>
-						<p>Adress line 2</p>
-						<p>Phone: +548 945645</p>
-						<p>Fax: +456456 54546</p>					 
-					</div>
-					<div class="address2">
-						<p>Web: www.designagency.net</p>
-						<p>E-mail: info@designagency.net</p>
-					</div>
-					<div class="map">
-						<img src="images/googlemap.png">
+			<div class="wrapper">			
+				<div class="contacts">
+					<div class="forms">
+						<form>
+							<input type="text" name="name" placeholder="Name*">				
+							<input type="text" name="subject" placeholder="Subject*">
+							<input type="text" name="e-mail" placeholder="E-mail*">
+							<textarea rows="5">Massege*</textarea>
+							<button class="send-massege">send massege</button>						
+						</form>
+					</div>				
+					<div class="address">
+						<div class="address-1">
+							<p>Adress line 1</p>
+							<p>Adress line 2</p>
+							<p>Phone: +548 945645</p>
+							<p>Fax: +456456 54546</p>					 
+						</div>
+						<div class="address-2">
+							<p>Web: www.designagency.net</p>
+							<p>E-mail: info@designagency.net</p>
+						</div>
+						<div class="map">
+							<img src="images/googlemap.png">
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>		
-	</div> -->
+			</div>		
+		</div>
+	</div>
+	
 
 	<!-- ============ FOOTER ============ -->
 
