finished work at section FOOTER

--- a/src/index.html
+++ b/src/index.html
@@ -279,18 +279,20 @@
 
 	<!-- ============ FOOTER ============ -->
 
-	<!-- <footer>
-		<div class="content-footer">
-			<h3>FOLLOW US</h3>
-			<div class="footer-icons">
-				<i class="fab fa-pinterest-p"></i>
-				<i class="fab fa-twitter"></i>
-				<i class="fab fa-facebook-f"></i>
-				<i class="fas fa-basketball-ball"></i>
-			</div>			
-			<p>Copyright kpexaman, All Rights Reserved</p>
-		</div>
-	</footer> -->
+	<div class="main-footer">
+		<footer class="wrapper">
+			<div class="content-footer">
+				<h3>FOLLOW US</h3>
+				<div class="footer-icons">
+					<i class="fab fa-pinterest-p footer-icon"></i>
+					<i class="fab fa-twitter footer-icon"></i>
+					<i class="fab fa-facebook-f footer-icon"></i>
+					<i class="fas fa-basketball-ball footer-icon"></i>
+				</div>			
+				<p>Copyright kpexaman, All Rights Reserved</p>
+			</div>
+		</footer>
+	</div>	
 
 	<!-- ============ SCRIPTS ============ -->
 	
