--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,12 @@
 		<header class="wrapper header">
 			<nav class="menu">
 				<img src="images/logo.png" alt="logo" class="logo">
-				<i class="burger fas fa-bars"></i>
+				<div class="burger">
+					<i class="burgerItem fas fa-bars"></i>
+				</div>
+				<div class="close">
+					<i class="closeItem fas fa-times"></i>
+				</div>				
 			</nav>
 			<div class="caption-container">
 				<h1 class="caption">say hello to <span>shopno!</span></h1>
