began work at navigation menu

--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,23 @@
 
 <!-- ============ HEADER ============ -->
 
-	<div class="main-header">
+	<div class="main-header" id="header">
 		<header class="wrapper header">
-			<nav class="menu">
-				<img src="images/logo.png" alt="logo" class="logo">
+			<nav class="menu">				
+				<ul class="menu-items">
+					<li><img src="images/logo.png" alt="logo" class="logo"></li>
+					<li><a href="#about-us">ABOUT US</a></li>
+					<li><a href="#featured-works">FEATURED WORKS</a></li>
+					<li><a href="#services">SERVICES</a></li>
+					<li><a href="#team">TEAM</a></li>
+					<li><a href="#what-they-says">WHAT THEY SAYS</a></li>
+					<li><a href="#about">ABOUT</a></li>					
+				</ul>
 				<div class="burger">
-					<i class="burgerItem fas fa-bars"></i>
+					<i class="burger-item fas fa-bars"></i>
 				</div>
 				<div class="close">
-					<i class="closeItem fas fa-times"></i>
+					<i class="close-item fas fa-times"></i>
 				</div>				
 			</nav>
 			<div class="caption-container">
@@ -35,7 +43,7 @@
 
 	<!-- ============ ABOUT US ============ -->
 
-	<div class="main-about-us">
+	<div class="main-about-us" id="about-us">
 		<section class="wrapper">
 			<h3 class="page-caption">ABOUT US</h3>
 			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
@@ -64,7 +72,7 @@
 	
 	<!-- ============ FEATURED WORKS ============ -->
 
-	<div class="main-featured-works">
+	<div class="main-featured-works" id="featured-works">
 		<div class="wrapper">
 			<h3 class="page-caption">Featured works</h3>
 			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
@@ -93,7 +101,7 @@
 	
 	<!-- ============ SERVICES ============ -->
 
-	<div class="main-services">
+	<div class="main-services" id="services">
 		<div class="wrapper">
 			<h3 class="page-caption">our services</h3>
 			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
@@ -169,7 +177,7 @@
 
 	<!-- ============ TEAM ============ -->
 
-	<div class="main-team">
+	<div class="main-team" id="team">
 		<div class="wrapper">
 			<h3 class="page-caption">small team</h3>
 			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
@@ -198,7 +206,7 @@
 
 	<!-- ============ WHAT THEY SAYS ============ -->
 
-	<div class="main-says">
+	<div class="main-says" id="what-they-says">
 		<div class="wrapper">
 			<h3 class="page-caption">what they says</h3>
 			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
@@ -238,7 +246,7 @@
 
 	<!-- ============ BRANDS ============ -->
 
-	<div class="main-brands">
+	<div class="main-brands" id="about">
 		<div class="wrapper">
 			<div class="brands">
 				<img src="images/logo-footer.png" alt="brands">
