finished work at menu style

--- a/src/index.html
+++ b/src/index.html
@@ -11,25 +11,21 @@
 
 <!-- ============ HEADER ============ -->
 
-	<div class="main-header" id="header">
-		<header class="wrapper header">
-			<nav class="menu">				
-				<ul class="menu-items">
-					<li><img src="images/logo.png" alt="logo" class="logo"></li>
-					<li><a href="#about-us">ABOUT US</a></li>
-					<li><a href="#featured-works">FEATURED WORKS</a></li>
-					<li><a href="#services">SERVICES</a></li>
-					<li><a href="#team">TEAM</a></li>
-					<li><a href="#what-they-says">WHAT THEY SAYS</a></li>
-					<li><a href="#about">ABOUT</a></li>					
-				</ul>
-				<div class="burger">
-					<i class="burger-item fas fa-bars"></i>
-				</div>
-				<div class="close">
-					<i class="close-item fas fa-times"></i>
-				</div>				
-			</nav>
+	<div class="main-header" id="header">		
+		<nav class="menu">
+			<div>
+				<img src="images/logo.png" alt="logo" class="logo">	
+			</div>						
+			<ul class="menu-items">					
+				<li><a href="#about-us">ABOUT US</a></li>
+				<li><a href="#featured-works">FEATURED WORKS</a></li>
+				<li><a href="#services">SERVICES</a></li>
+				<li><a href="#team">TEAM</a></li>
+				<li><a href="#what-they-says">WHAT THEY SAYS</a></li>
+				<li><a href="#about">ABOUT</a></li>					
+			</ul>					
+		</nav>				
+		<header class="wrapper header">			
 			<div class="caption-container">
 				<h1 class="caption">say hello to <span>shopno!</span></h1>
 				<h1 class="caption"><span>agency</span> corporate shopno theme</h1>
