--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 				<li><a href="#services">SERVICES</a></li>
 				<li><a href="#team">TEAM</a></li>
 				<li><a href="#what-they-says">WHAT THEY SAYS</a></li>
-				<li><a href="#about">ABOUT</a></li>					
+				<li><a href="#contacts">CONTACTS</a></li>					
 			</ul>					
 		</nav>				
 		<header class="wrapper header">			
@@ -246,7 +246,7 @@
 
 	<!-- ============ BRANDS ============ -->
 
-	<div class="main-brands" id="about">
+	<div class="main-brands" id="contacts">
 		<div class="wrapper">
 			<div class="brands">
 				<img src="images/logo-footer.png" alt="brands">
