finished work with menu
made it responsieve and adaptive, added some styles

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
 		<nav class="menu">
 			<div>
 				<img src="images/logo.png" alt="logo" class="logo">	
-			</div>						
+			</div>
+			<div class="nav-tittle">MENU</div>						
 			<ul class="menu-items">					
 				<li><a href="#about-us">ABOUT US</a></li>
 				<li><a href="#featured-works">FEATURED WORKS</a></li>
