--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat:800|Montserrat|Raleway" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">	
 </head>
 <body>
+
+<!-- ============ BUTTON FOR TOP SCROLL ============ -->
 
 		<div class="btn-up">
 				<i class="fas fa-arrow-up"></i>
@@ -48,15 +50,17 @@
 		<section class="wrapper">
 			<h3 class="page-caption">ABOUT US</h3>
 			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
-			<div class="content-about-us">
-				<div class="image-about-us">
-					<img src="images/about_us-1.png" alt="work place">
-					<div class="navigation-dots-about-us">
+			<div class="content-about-us">				
+				<div class="images-about-us">					
+					<img src="images/about_us-1.png" alt="work place" class="none">
+					<img src="images/about_us-2.jpg" alt="work place">					
+					<div class="navigation-about-us">
+						<i class="fas fa-caret-left"></i>
 						<i class="fas fa-circle"></i>
-						<i class="fas fa-circle"></i>
-						<i class="fas fa-circle"></i>
+						<i class="fas fa-circle"></i>													
+						<i class="fas fa-caret-right"></i>					
 					</div>			
-				</div>				
+				</div>								
 				<article class="article-about-us">
 					<h5 class="caption-article">We Actually Do amazing works</h5>
 					<p class="text-article">A visual approach is an approach to a runway at an airport 
@@ -311,6 +315,6 @@
 	<!-- ============ SCRIPTS ============ -->
 	
 	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>	
-	<script src="js/scripts.js"></script>
+	<script src="js/scripts.js"></script>	
 </body>
 </html>
