--- a/src/index.html
+++ b/src/index.html
@@ -51,16 +51,9 @@
 			<h3 class="page-caption">ABOUT US</h3>
 			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
 			<div class="content-about-us">				
-				<div class="images-about-us">					
-					<img src="images/about_us-1.png" alt="work place" class="none">
-					<img src="images/about_us-2.jpg" alt="work place">					
-					<div class="navigation-about-us">
-						<i class="fas fa-caret-left"></i>
-						<i class="fas fa-circle"></i>
-						<i class="fas fa-circle"></i>													
-						<i class="fas fa-caret-right"></i>					
-					</div>			
-				</div>								
+				<div class="image-about-us">						
+					<img src="images/about_us-2.jpg" alt="work place">													
+				</div>
 				<article class="article-about-us">
 					<h5 class="caption-article">We Actually Do amazing works</h5>
 					<p class="text-article">A visual approach is an approach to a runway at an airport 
@@ -70,8 +63,8 @@
 					<p class="text-article">A visual approach is an approach to a runway at an airport 
 					conducted under instrument flight rules.<br>
 					The preceding aircraft in approach correct sight.</p>
-				</article>
-			</div>					
+				</article>			
+			</div>								
 		</section>
 	</div>
 	
